press F5 warning for users, when inserting neu contastatus data

--- a/app/views/contaminationstatuses/new.html.erb
+++ b/app/views/contaminationstatuses/new.html.erb
@@ -8,12 +8,13 @@
       </div>
 
 		  <div class="col-md-3" id="leftCol">
-		  	<div class="well">  	
+		  	<div class="well">  
 			    <%= render 'layouts/sidebar_insert' %>
 				</div>
 	    </div>		 
 
-		  <div class="col-md-9" id="rightCol">		  		
+		  <div class="col-md-9" id="rightCol">	
+		  	<h3><p class="text-primary"><strong>Please press F5 before start inserting data! Ensure that all attributes are dependent from Reference chosen.</strong></p>	</h3>  		
 				<%= render 'form' %>			
 			</div>
 
