--- a/app/views/agents/_form_agent.html.erb
+++ b/app/views/agents/_form_agent.html.erb
@@ -1,65 +1,74 @@
-      <div class="field">
-        <%= f.label :"agent common name" %><br>
-        <%= f.collection_select :adminagentname_id, Adminagentname.all.order(:a_common_name), :id, :a_common_name, {include_blank: true}, {class: "form-control"} %>
-      </div>
-
-      <div class="field">
-        <%= f.label :"agent family" %><br>
-        <%= f.collection_select :adminagentfamily_id, Adminagentfamily.all.order(:a_family), :id, :a_family, {include_blank: true}, {class: "form-control"} %>
-      </div>
-      <div class="field">
-        <%= f.label :"agent genus" %><br>
-        <%= f.collection_select :adminagentgenu_id, Adminagentgenu.all.order(:a_genus), :id, :a_genus, {include_blank: true}, {class: "form-control"} %>
-      </div>
-      <div class="field">
-        <%= f.label :"agent species" %><br>
-        <%= f.collection_select :adminagentspec_id, Adminagentspec.all.order(:a_species), :id, :a_species, {include_blank: true}, {class: "form-control"} %>
-      </div>
-      <div class="field">
-        <%= f.label :subspecies %><br>
-        <%= f.text_field :subspecies, class: "form-control" %>
-      </div>
-      <div class="field">
-        <%= f.label :serovar %><br>
-        <%= f.text_field :serovar, class: "form-control" %>
-      </div>
-      <div class="field">
-        <%= f.label :other_agent_name %><br>
-        <%= f.text_field :other_agent_name, :placeholder=>"if no agent name above match, otherwise: n.a.", class: "form-control"  %>
-      </div>
-      <div class="field">
-        <%= f.label :"Reference number" %><br>
-        <%= f.text_field :ref_number, :placeholder=>"e.g. ATCC 10832", class: "form-control" %>
-      </div>
-      <div class="field">
-        <%= f.label :"rate_of_illness (%)" %><br>
-        <%= f.text_field :rate_of_illness, class: "form-control" %>
-      </div>
-      <div class="field">
-        <%= f.label :"morbidity (%)" %><br>
-        <%= f.text_field :morbidity, class: "form-control" %>
-      </div>
-      <div class="field">
-        <%= f.label :"mortality (%)" %><br>
-        <%= f.text_field :mortality, class: "form-control" %>
-      </div>
-      <div class="field">
-        <%= f.label :isolation_source %><br>
-        <%= f.text_field :isolation_source, class: "form-control" %>
-      </div>
-      <div class="field">
-        <%= f.label :natural_occurence %><br>
-        <%= f.text_field :natural_occurence, class: "form-control" %>
-      </div>
-      <div class="field">
-        <%= f.label :"Agent comment" %><br>
-        <%= f.text_area :a_comment, class: "form-control" %>
-      </div>
-      <div class="field">
+      <div class="form-group">
         <%= f.label :reference_id %><br>
         <%= f.select :reference_id, Reference.all.order(:first_author_name, :year).collect {|c| [ c.full_ref, c.id ] }, { :include_blank => true, :selected => @agent.reference_id}, class: "form-control" %>
       </div>
-      <div class="field">
-        <%= f.label :user_id %><br>
-        <%= f.number_field :user_id, class: "form-control" %>
+
+      <div class="row">
+        <div class="col-md-6">
+          <div class="panel panel-info">
+            <div class="panel-body">
+              <div class="form-group">
+                <%= f.label :"agent common name" %><br>
+                <%= f.collection_select :adminagentname_id, Adminagentname.all.order(:a_common_name), :id, :a_common_name, {include_blank: true}, {class: "form-control"} %>
+              </div>
+              <div class="form-group">
+                <%= f.label :"agent family" %><br>
+                <%= f.collection_select :adminagentfamily_id, Adminagentfamily.all.order(:a_family), :id, :a_family, {include_blank: true}, {class: "form-control"} %>
+              </div>
+              <div class="form-group">
+                <%= f.label :"agent genus" %><br>
+                <%= f.collection_select :adminagentgenu_id, Adminagentgenu.all.order(:a_genus), :id, :a_genus, {include_blank: true}, {class: "form-control"} %>
+              </div>
+              <div class="form-group">
+                <%= f.label :"agent species" %><br>
+                <%= f.collection_select :adminagentspec_id, Adminagentspec.all.order(:a_species), :id, :a_species, {include_blank: true}, {class: "form-control"} %>
+              </div>
+              <div class="form-group">
+                <%= f.label "subspecies " %><br>
+                <%= f.text_field :subspecies, class: "form-control" %>
+              </div>
+              <div class="form-group">
+                <%= f.label "serovar " %><br>
+                <%= f.text_field :serovar, class: "form-control" %>
+              </div>
+              <div class="form-group">
+                <%= f.label "other agent name" %><br>
+                <%= f.text_field :other_agent_name, :placeholder=>"if no agent name above match, otherwise: n.a.", class: "form-control"  %>
+              </div>
+              <div class="form-group">
+                <%= f.label :"Reference number" %><br>
+                <%= f.text_field :ref_number, :placeholder=>"e.g. ATCC 10832", class: "form-control" %>
+              </div>              
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="panel panel-info">
+            <div class="panel-body">
+              <div class="form-group">
+                <%= f.label :"rate_of_illness (%)" %><br>
+                <%= f.text_field :rate_of_illness, class: "form-control" %>
+              </div>
+              <div class="form-group">
+                <%= f.label :"morbidity (%)" %><br>
+                <%= f.text_field :morbidity, class: "form-control" %>
+              </div>
+              <div class="form-group">
+                <%= f.label :"mortality (%)" %><br>
+                <%= f.text_field :mortality, class: "form-control" %>
+              </div>
+              <div class="form-group">
+                <%= f.label :"isolation source" %><br>
+                <%= f.text_field :isolation_source, class: "form-control" %>
+              </div>
+              <div class="form-group">
+                <%= f.label :"natural occurence" %><br>
+                <%= f.text_field :natural_occurence, class: "form-control" %>
+              </div>              
+            </div>
+          </div>
+        </div>        
       </div>
+
+              
+
