--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -54,18 +54,21 @@ h1 {
     text-align: left;
     font-weight: bold;
     padding: 5px 5px 5px 15px;
-    font-size: 12px;
+    font-size: 16px;
     margin: -7px;
     margin-bottom: 0px;
-    background-color: #c00;
+    background-color: #df6e1e;
     color: #fff;
   }
   ul li {
-    font-size: 12px;
     list-style: square;
   }
 }
 
+.field_with_errors {
+  padding: 2px;
+  background-color: #df6e1e;
+}
 
 /* http://bootstrapzero.com/bootstrap-template/sticky-footer */
 /* Wrapper for page content to push down footer */
@@ -123,50 +126,6 @@ h1 {
 .table > tbody > tr > td{ 
     vertical-align: middle;
 }
-
-/*CSS zum vergrößern vom Thumb*/
-
-a.menue, a.menue:link, a.menue:visited, a.menue:active {
-position: relative;
-text-decoration: none;
-}
-
-a.menue:hover {
-z-index:1000;
-background: transparent;
-}
-
-a.menue span {
-display: none;
-text-decoration: none;
-}
-
-a.menue:hover span {
-z-index:1;
-display: block;
-position: absolute;
-bottom: 0px;
-left: 0px;
-padding: 0px;
-}
-
-
-a {
-  color: #FFFFFF;
-  text-decoration: none;
-}
-
-a:hover,
-a:focus, 
-a:visited {
-  color: #FFFFFF;
-}
-a:focus {
-  outline: thin dotted;
-  outline: 5px auto -webkit-focus-ring-color;
-  outline-offset: -2px;
-  }
-
 
 
 /* uebung 5 */
