--- a/app/views/agents/_form.html.erb
+++ b/app/views/agents/_form.html.erb
@@ -16,10 +16,16 @@
   <div class="panel panel-info">
     <div class="panel-body"> 
       <%= render 'form_agent', f: f %>
+      <div class="row">
       <%= f.fields_for :agentparams do |builder| %>
         <%= render 'agentparam_fields', f: builder %>
       <% end %>
       <p><%= f.link_to_add "Add more exposure to hazard attribute fields.", :agentparams, class: "btn btn-success btn-sm" %></p>
+      </div>
+      <div class="form-group">
+        <%= f.label :"Agent comment" %><br>
+        <%= f.text_area :a_comment, class: "form-control" %>
+      </div>
     </div>
   </div>
   <div class="actions">
