--- a/app/views/detections/_culdetec_fields.html.erb
+++ b/app/views/detections/_culdetec_fields.html.erb
@@ -1,31 +1,37 @@
-  <div class="form-group">
-    <%= f.link_to_remove "Remove these cultural detection parameter fields.", class: "btn btn-danger btn-sm" %>
-  </div>
-  <div class="field">
-    <%= f.label :medium %><br>
-    <%= f.text_field :medium %>
-  </div>
-  <div class="field">
-    <%= f.label :agar %><br>
-    <%= f.text_field :agar %>
-  </div>
-  <div class="field">
-    <%= f.label :incubation_duration %><br>
-    <%= f.text_field :incubation_duration %>
-  </div>
-  <div class="field">
-    <%= f.label :incubation_duration_unit %><br>
-    <%= f.text_field :incubation_duration_unit %>
-  </div>
-  <div class="field">
-    <%= f.label :incubation_temp %><br>
-    <%= f.text_field :incubation_temp %>
-  </div>
-  <div class="field">
-    <%= f.label :sample_volume_per_disc %><br>
-    <%= f.number_field :sample_volume_per_disc %>
-  </div>
-  <div class="field">
-    <%= f.label :medium_volume_per_disc %><br>
-    <%= f.text_field :medium_volume_per_disc %>
-  </div>
+  <div class="col-md-6">
+    <div class="panel panel-info">
+      <div class="panel-body">
+        <div class="form-group">
+          <%= f.link_to_remove "Remove cultural detection parameter fields.", class: "btn btn-danger btn-sm" %>
+        </div>
+        <div class="form-group">
+          <%= f.label :"medium " %><br>
+          <%= f.text_field :medium, class: "form-control" %>
+        </div>
+        <div class="form-group">
+          <%= f.label :"agar " %><br>
+          <%= f.text_field :agar, class: "form-control" %>
+        </div>
+        <div class="form-group">
+          <%= f.label :"incubation_duration " %><br>
+          <%= f.text_field :incubation_duration, class: "form-control" %>
+        </div>
+        <div class="form-group">
+          <%= f.label :"incubation_duration_unit " %><br>
+          <%= f.text_field :incubation_duration_unit, class: "form-control" %>
+        </div>
+        <div class="form-group">
+          <%= f.label :"incubation_temp " %><br>
+          <%= f.text_field :incubation_temp, class: "form-control" %>
+        </div>
+        <div class="form-group">
+          <%= f.label :"sample_volume_per_disc " %><br>
+          <%= f.number_field :sample_volume_per_disc, class: "form-control" %>
+        </div>
+        <div class="form-group">
+          <%= f.label :"medium_volume_per_disc " %><br>
+          <%= f.text_field :medium_volume_per_disc, class: "form-control" %>
+        </div>
+      </div> 
+    </div> 
+  </div> 
