--- a/app/views/detections/_form.html.erb
+++ b/app/views/detections/_form.html.erb
@@ -15,121 +15,144 @@
 <div class="well">          
   <div class="panel panel-info">
     <div class="panel-body">
-
-      <div class="field">
-        <%= f.label :"detection_short_name" %><br>
+      <div class="form-group">
+        <%= f.label :reference_id %><br>
+        <%= f.select :reference_id, Reference.all.order(:first_author_name, :year).collect {|c| [ c.full_ref, c.id ] }, { :include_blank => true, :selected => @detection.reference_id}, class: "form-control" %>
+      </div>
+      <div class="form-group">
+        <%= f.label :"detection_short_name " %><br>
         <%= f.text_field :d_short_name, class: "form-control" %>
       </div>
-      <div class="field">
-        <%= f.label :"detection_long_name" %><br>
+      <div class="form-group">
+        <%= f.label :"detection_long_name " %><br>
         <%= f.text_area :d_long_name, class: "form-control" %>
       </div>
-
-      <div class="field">
-        <%= f.label :"detection_method_validated_for_condiments" %><br>    
+      <div class="form-group">
+        <%= f.label :"detection_process_description " %><br>
+        <%= f.text_area :d_process_description, class: "form-control" %>
+      </div>
+      <div class="form-group">
+        <%= f.label :"detection_method_type " %><br>
+        <%= f.collection_select :admindetectiontype_id, Admindetectiontype.all.order(:detection_method_type), :id, :detection_method_type, {include_blank: true}, {class: "form-control"} %>
+      </div>
+      <div class="form-group">
+        <%= f.label :"detection_device_needed " %><br>
+        <%= f.text_field :d_device_needed, class: "form-control" %>
+      </div>
+      <div class="row">
+        <div class="panel panel-info">
+          <div class="panel-body">
+            <div class="col-md-4">
+              <div class="form-group">
+                <%= f.label :"duration_until_result " %><br>
+                <%= f.radio_button :duration_until_result_unit, "seconds"  %> <%= f.label :duration_until_result_unit, "seconds" %><br>
+                <%= f.radio_button :duration_until_result_unit, "minutes"  %> <%= f.label :duration_until_result_unit, "minutes" %><br>
+                <%= f.radio_button :duration_until_result_unit, "hours"  %> <%= f.label :duration_until_result_unit, "hours" %> <br>
+                <%= f.radio_button :duration_until_result_unit, "days"  %> <%= f.label :duration_until_result_unit, "days" %> <br>
+                <%= f.radio_button :duration_until_result_unit, "months"  %> <%= f.label :duration_until_result_unit, "months" %>         
+                <%= f.text_field :duration_until_result, class: "form-control" %>        
+              </div>
+            </div>
+            <div class="col-md-4">            
+              <div class="form-group">
+                <%= f.label :"detection_weight_of_sample " %><br>
+                <%= f.radio_button :d_weight_of_sample_unit, "Milligramm"  %> <%= f.label :d_weight_of_sample_unit, "Milligramm" %><br>
+                <%= f.radio_button :d_weight_of_sample_unit, "Gramm"  %> <%= f.label :d_weight_of_sample_unit, "Gramm" %><br>
+                <%= f.radio_button :d_weight_of_sample_unit, "Kilogramm"  %> <%= f.label :d_weight_of_sample_unit, "Kilogramm" %>         
+                <%= f.text_field :d_weight_of_sample, class: "form-control" %>
+              </div>
+            </div>
+            <div class="col-md-4">               
+              <div class="form-group">
+                <%= f.label :"detection_method_dilution " %><br>
+                <%= f.text_field :detection_method_dilution, class: "form-control" %>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>          
+      <div class="row">
+        <div class="panel panel-info">
+          <h3>molecular detection method</h3>
+          <div class="panel-body">        
+            <div class="form-group">
+              <%= f.label :"target_gen " %><br>
+              <%= f.text_field :target_gen, class: "form-control" %>
+            </div>
+            <div class="form-group">
+              <%= f.label :"target_protein " %><br>
+              <%= f.text_field :target_protein, class: "form-control" %>
+            </div>
+            <div class="form-group">
+              <%= f.label :"other_characteristic " %><br>
+              <%= f.text_area :other_characteristic, class: "form-control" %>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+          <div class="panel panel-info">
+            <h3>cultural detection method</h3>
+            <div class="panel-body">      
+              <div class="form-group">
+                <%= f.label :"technique " %><br>
+                <%= f.text_field :technique, class: "form-control" %>
+              </div>
+              <div class="row">
+              <%= f.fields_for :culdetecs do |builder| %>
+                <%= render 'culdetec_fields', f: builder %>
+              <% end %>
+              <p><%= f.link_to_add "Add more cultural detection parameter fields.", :culdetecs, class: "btn btn-success btn-sm" %></p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="form-group">
+        <%= f.label :"detection_method_validated_for_condiments?" %>   
         <%= f.radio_button :d_method_validated_for_condiments, "Yes"  %> <%= f.label :d_method_validated_for_condiments, "Yes" %>
         <%= f.radio_button :d_method_validated_for_condiments, "No"  %> <%= f.label :d_method_validated_for_condiments, "No" %>
         <%= f.radio_button :d_method_validated_for_condiments, "Unknown"  %> <%= f.label :d_method_validated_for_condiments, "Unknown" %>          
       </div>
-      <div class="field">
-        <%= f.label :"detection_process_description" %><br>
-        <%= f.text_area :d_process_description, class: "form-control" %>
-      </div>
-      <div class="field">
-        <%= f.label :"detection_weight_of_sample" %><br>
-        <%= f.text_field :d_weight_of_sample, class: "form-control" %>
-      </div>
-      <div class="field">
-        <%= f.label :"detection_weight_of_sample_unit" %><br>
-        <%= f.radio_button :d_weight_of_sample_unit, "Milligramm"  %> <%= f.label :d_weight_of_sample_unit, "Milligramm" %>
-        <%= f.radio_button :d_weight_of_sample_unit, "Gramm"  %> <%= f.label :d_weight_of_sample_unit, "Gramm" %>
-        <%= f.radio_button :d_weight_of_sample_unit, "Kilogramm"  %> <%= f.label :d_weight_of_sample_unit, "Kilogramm" %> 
-      </div>
-      <div class="field">
-        <%= f.label :detection_method_dilution %><br>
-        <%= f.text_field :detection_method_dilution, class: "form-control" %>
-      </div>
-      <div class="field">
-        <%= f.label :"detection_method_type" %><br>
-        <%= f.collection_select :admindetectiontype_id, Admindetectiontype.all.order(:detection_method_type), :id, :detection_method_type, {include_blank: true}, {class: "form-control"} %>
-      </div>
-      <div class="field">
-        <%= f.label :duration_until_result %><br>
-        <%= f.text_field :duration_until_result, class: "form-control" %>        
-      </div>
-      <div class="field">
-        <%= f.label :duration_until_result_unit %><br>
-        <%= f.radio_button :duration_until_result_unit, "seconds"  %> <%= f.label :duration_until_result_unit, "seconds" %>
-        <%= f.radio_button :duration_until_result_unit, "minutes"  %> <%= f.label :duration_until_result_unit, "mminutes" %>
-        <%= f.radio_button :duration_until_result_unit, "hours"  %> <%= f.label :duration_until_result_unit, "hours" %> 
-        <%= f.radio_button :duration_until_result_unit, "days"  %> <%= f.label :duration_until_result_unit, "days" %> 
-        <%= f.radio_button :duration_until_result_unit, "months"  %> <%= f.label :duration_until_result_unit, "months" %> 
-      </div>
-      <div class="field">
-        <%= f.label :target_gen %><br>
-        <%= f.text_field :target_gen, class: "form-control" %>
-      </div>
-      <div class="field">
-        <%= f.label :target_protein %><br>
-        <%= f.text_field :target_protein, class: "form-control" %>
-      </div>
-      <div class="field">
-        <%= f.label :other_characteristic %><br>
-        <%= f.text_area :other_characteristic, class: "form-control" %>
-      </div>
-      <div class="field">
-        <%= f.label :technique %><br>
-        <%= f.text_field :technique, class: "form-control" %>
-      </div>
-
-      <%= f.fields_for :culdetecs do |builder| %>
-        <%= render 'culdetec_fields', f: builder %>
-      <% end %>
-      <p><%= f.link_to_add "Add more cultural detection parameter fields.", :culdetecs, class: "btn btn-success btn-sm" %></p>
-
-      <div class="field">
-        <%= f.label :verification %><br>
+      <div class="form-group">
+        <%= f.label :"verification " %><br>
         <%= f.text_area :verification, :placeholder=>"e.g. cultural method type: how should colonies look like? how to verificate them? ", class: "form-control" %>
       </div>
-      <div class="field">
-        <%= f.label :interpretation %><br>
+      <div class="form-group">
+        <%= f.label :"interpretation " %><br>
         <%= f.text_area :interpretation, :placeholder=>"e.g. cultural method type: what means when haemolysis is negative od positive?", class: "form-control" %>
       </div>
-      <div class="field">
-        <%= f.label :"detection_device_needed" %><br>
-        <%= f.text_field :d_device_needed, class: "form-control" %>
-      </div>
-      <div class="field">
-        <%= f.label :method_for_comparison %><br>
+      <div class="form-group">
+        <%= f.label :"method_for_comparison " %><br>
         <%= f.text_area :method_for_comparison, class: "form-control" %>
       </div>
-      <div class="field">
-        <%= f.label :"LOD" %><br>
-        <%= f.text_field :lod, class: "form-control" %>
+      <div class="row">
+        <div class="col-md-3">
+          <div class="form-group">
+            <%= f.label :"LOD " %><br>
+            <%= f.text_field :lod, class: "form-control" %>
+          </div>
+        </div>
+        <div class="col-md-3">  
+          <div class="form-group">
+            <%= f.label :"sensitivity (%)" %><br>
+            <%= f.text_field :sensitivity, class: "form-control" %>
+          </div>
+        </div>
+        <div class="col-md-3">  
+          <div class="form-group">
+            <%= f.label :"specifity (%)" %><br>
+            <%= f.text_field :specifity, class: "form-control" %>
+          </div>
+        </div>
+        <div class="col-md-3">  
+          <div class="form-group">
+            <%= f.label :"reliability_score " %><br>
+            <%= f.select :reliability_score, ["Green", "Yellow", "Red"], {:include_blank => true}, class: "form-control"  %>
+          </div>
+        </div>
       </div>
-      <div class="field">
-        <%= f.label :"sensitivity (%)" %><br>
-        <%= f.text_field :sensitivity, class: "form-control" %>
-      </div>
-      <div class="field">
-        <%= f.label :"specifity (%)" %><br>
-        <%= f.text_field :specifity, class: "form-control" %>
-      </div>
-      <div class="field">
-        <%= f.label :reliability_score %><br>
-        <%= f.select :reliability_score, ["Green", "Yellow", "Red"], {:include_blank => true}, class: "form-control"  %>
-      </div>
-      <div class="field">
-        <%= f.label :"detection_comment" %><br>
+        <%= f.label :"detection_comment " %><br>
         <%= f.text_area :d_comment, class: "form-control" %>
-      </div>
-      <div class="field">
-        <%= f.label :reference_id %><br>
-        <%= f.select :reference_id, Reference.all.order(:first_author_name, :year).collect {|c| [ c.full_ref, c.id ] }, { :include_blank => true, :selected => @detection.reference_id}, class: "form-control" %>
-      </div>
-      <div class="field">
-        <%= f.label :user_id %><br>
-        <%= f.number_field :user_id, class: "form-control" %>
       </div>
 
     </div>
