--- a/app/views/references/_form.html.erb
+++ b/app/views/references/_form.html.erb
@@ -17,45 +17,47 @@
     <div class="panel-body">
 
       <div class="form-group">
-        <%= f.label :"type_of_literatur" %><br>
+        <%= f.label :"type of literatur" %><br>
         <%= f.collection_select :adminreferencetype_id, Adminreferencetype.all.order(:type_of_literatur), :id, :type_of_literatur, {include_blank: true}, {class: "form-control"} %>
       </div>
       <div class="form-group">
-        <%= f.label :first_author_name %><br>
+        <%= f.label :"first author name" %><br>
         <%= f.text_field :first_author_name, class: "form-control" %>
       </div>
       <div class="form-group">
-        <%= f.label :year %><br>
-        <%= f.number_field :year, class: "form-control" %>
-      </div>
-      <div class="form-group">
-        <%= f.label :title %><br>
+        <%= f.label :"title " %><br>
         <%= f.text_field :title, class: "form-control" %>
       </div>
       <div class="form-group">
-        <%= f.label :journal %><br>
+        <%= f.label :"journal " %><br>
         <%= f.text_field :journal, class: "form-control" %>
-      </div>
-      <div class="form-group">
-        <%= f.label :volume %><br>
-        <%= f.number_field :volume, class: "form-control" %>
       </div>
       <div class="field">
         <div class="row">
           <div class="col-md-3">
-            <%= f.label :page_from %><br>
+            <div class="form-group">
+              <%= f.label :"year " %><br>
+              <%= f.number_field :year, class: "form-control" %>
+            </div>
+          </div>  
+          <div class="col-md-3">
+            <div class="form-group">
+              <%= f.label :"volume " %><br>
+              <%= f.number_field :volume, class: "form-control" %>
+            </div>            
+          </div>
+          <div class="col-md-3">
+            <%= f.label :"page from" %><br>
             <%= f.text_field :page_from, class: "form-control" %>
           </div>              
-        </div> 
-        <div class="row">
           <div class="col-md-3">
-            <%= f.label :page_to %><br>
+            <%= f.label :"page to" %><br>
             <%= f.text_field :page_to, class: "form-control" %>
           </div>              
         </div>         
       </div>
       <div class="form-group">
-        <%= f.label :link %><br>
+        <%= f.label :"link " %><br>
         <%= f.text_field :link, class: "form-control" %>
       </div>
       <div class="row">
@@ -65,33 +67,33 @@
             <div class="col-md-3">              
               <div class="form-group">
                 <%= f.check_box :matrix %> 
-                <%= f.label :matrix %>
+                <%= f.label :"matrix " %>
               </div>
               <div class="form-group">
                 <%= f.check_box :agent %>
-                <%= f.label :agent %>
+                <%= f.label :"agent " %>
               </div>
               <div class="form-group">
                 <%= f.check_box :tenacity %>
-                <%= f.label :tenacity %>        
+                <%= f.label :"tenacity " %>        
               </div>              
             </div>          
-            <div class="col-md-3">
+            <div class="col-md-4">
               <div class="form-group">
-                <%= f.label :"Sample preparation" %>                
                 <%= f.check_box :sample_prep %>
+                <%= f.label :"Sample preparation" %>                                
               </div>
               <div class="form-group">
                 <%= f.check_box :detection %>
-                <%= f.label :detection %>
+                <%= f.label :"detection " %>
               </div>
               <div class="form-group">
                 <%= f.check_box :spiking %>
-                <%= f.label :spiking %>
+                <%= f.label :"spiking " %>
               </div>
               <div class="form-group">
                 <%= f.check_box :treatment %>
-                <%= f.label :treatment %>
+                <%= f.label :"treatment " %>
               </div>
             </div>
           </div>
@@ -101,12 +103,6 @@
         <%= f.label :"Reference comment" %><br>
         <%= f.text_area :r_comment, class: "form-control" %>
       </div>
-      <div class="form-group">
-        <%= f.label :user_id %><br>
-        <%= f.number_field :user_id , class: "form-control"%>
-      </div>
-
-
     </div>
   </div>
   <div class="actions">
