--- a/app/views/results/_form.html.erb
+++ b/app/views/results/_form.html.erb
@@ -16,31 +16,25 @@
   <div class="panel panel-info">
     <div class="panel-body">
 
-      <div class="field">
-        <%= f.label :cfu_initial %><br>
-        <%= f.number_field :cfu_initial %>
-      </div>
-      <div class="field">
-        <%= f.label :cfu_initial_unit %><br>
+      <div class="form-group">
+        <%= f.label :"CfU initial" %><br>
         <%= f.radio_button :cfu_initial_unit, "CfU/Gramm"  %> <%= f.label :cfu_initial_unit, "CfU/Gramm" %>
         <%= f.radio_button :cfu_initial_unit, "CfU/Milliliter"  %> <%= f.label :cfu_initial_unit, "CfU/Milliliter" %>
+        <%= f.number_field :cfu_initial, class: "form-control" %>
       </div>
-      <div class="field">
-        <%= f.label :detectability %><br>
-        <%= f.check_box :detectability %>
+      <div class="form-group">
+        <%= f.label :"detectability" %>
+        <%= f.check_box :detectability%>
       </div>
-      <div class="field">
-        <%= f.label :cfu_detected %><br>
-        <%= f.number_field :cfu_detected %>
-      </div>
-      <div class="field">
-        <%= f.label :cfu_detected_unit %><br>
+      <div class="form-group">
+        <%= f.label :"cfu_detected " %><br>
         <%= f.radio_button :cfu_detected_unit, "CfU/Gramm"  %> <%= f.label :cfu_detected_unit, "CfU/Gramm" %>
-        <%= f.radio_button :cfu_detected_unit, "CfU/Milliliter"  %> <%= f.label :cfu_detected_unit, "CfU/Milliliter" %>
+        <%= f.radio_button :cfu_detected_unit, "CfU/Milliliter"  %> <%= f.label :cfu_detected_unit, "CfU/Milliliter" %>        
+        <%= f.number_field :cfu_detected, class: "form-control" %>
       </div>
-      <div class="field">
+      <div class="form-group">
         <%= f.label :"Result comment" %><br>
-        <%= f.text_area :r_comment %>
+        <%= f.text_area :r_comment, class: "form-control" %>
       </div>
     </div>
   </div>
