--- a/app/views/samplepreparations/_form.html.erb
+++ b/app/views/samplepreparations/_form.html.erb
@@ -15,115 +15,123 @@
 <div class="well">          
   <div class="panel panel-info">
     <div class="panel-body">
-
-  <div class="field">
-    <%= f.label :samprep_short_name %><br>
-    <%= f.text_field :samprep_short_name, class: "form-control" %>
-  </div>
-  <div class="field">
-    <%= f.label :samprep_long_name %><br>
-    <%= f.text_area :samprep_long_name, class: "form-control" %>
-  </div>
-  <div class="field">
-    <%= f.label :samprep_method_validated_for_condiments %><br>
-    <%= f.radio_button :samprep_method_validated_for_condiments, "Yes"  %> <%= f.label :samprep_method_validated_for_condiments, "Yes" %>
-    <%= f.radio_button :samprep_method_validated_for_condiments, "No"  %> <%= f.label :samprep_method_validated_for_condiments, "No" %>
-    <%= f.radio_button :samprep_method_validated_for_condiments, "Unknown"  %> <%= f.label :samprep_method_validated_for_condiments, "Unknown" %> 
-  </div>
-  <div class="field">
-    <%= f.label :samprep_process_description %><br>
-    <%= f.text_area :samprep_process_description, class: "form-control" %>
-  </div>
-  <div class="field">
-    <%= f.label :"Sampreparation_weight_of_sample" %><br>
-    <%= f.text_field :spik_weight_of_sample, class: "form-control" %>
-  </div>
-  <div class="field">
-    <%= f.label :"Sampreparation_weight_of_sample_unit" %><br>
-    <%= f.radio_button :spik_weight_of_sample_unit, "Milligramm"  %> <%= f.label :spik_weight_of_sample_unit, "Milligramm" %>
-    <%= f.radio_button :spik_weight_of_sample_unit, "Gramm"  %> <%= f.label :spik_weight_of_sample_unit, "Gramm" %>
-    <%= f.radio_button :spik_weight_of_sample_unit, "Kilogramm"  %> <%= f.label :spik_weight_of_sample_unit, "Kilogramm" %> 
-  </div>
-  <div class="field">
-    <%= f.label :"Dilution fluid" %><br>
-    <%= f.text_field :dilution_fuid, class: "form-control" %>
-  </div>
-  <div class="field">
-    <%= f.label :first_dilution_ratio %><br>
-    <%= f.text_field :first_dilution_ratio, class: "form-control" %>
-  </div>
-  <div class="field">
-    <%= f.label :homogenize_with %><br>
-    <%= f.text_field :homogenize_with, class: "form-control" %>
-  </div>
-  <div class ="well">
-    <div class="field">
-      <%= f.label :enrichment %><br>
-      <%= f.radio_button :enrichment, "Yes"  %> <%= f.label :enrichment, "Yes" %>
-      <%= f.radio_button :enrichment, "No"  %> <%= f.label :enrichment, "No" %>
-      <%= f.radio_button :enrichment, "Other"  %> <%= f.label :enrichment, "Other" %> 
-    </div>
-    <div class="field">
-      <%= f.label :"DNA extraction" %><br>
-      <%= f.radio_button :dna_extraction, "Yes"  %> <%= f.label :dna_extraction, "Yes" %>
-      <%= f.radio_button :dna_extraction, "No"  %> <%= f.label :dna_extraction, "No" %>
-      <%= f.radio_button :dna_extraction, "Other"  %> <%= f.label :dna_extraction, "Other" %>
-    </div>
-    <div class="field">
-      <%= f.label :"RNA extraction" %><br>
-      <%= f.radio_button :rna_extraction, "Yes"  %> <%= f.label :rna_extraction, "Yes" %>
-      <%= f.radio_button :rna_extraction, "No"  %> <%= f.label :rna_extraction, "No" %>
-      <%= f.radio_button :rna_extraction, "Other"  %> <%= f.label :rna_extraction, "Other" %>
-    </div>
-    <div class="field">
-      <%= f.label :protein_extraction %><br>
-      <%= f.radio_button :protein_extraction, "Yes"  %> <%= f.label :protein_extraction, "Yes" %>
-      <%= f.radio_button :protein_extraction, "No"  %> <%= f.label :protein_extraction, "No" %>
-      <%= f.radio_button :protein_extraction, "Other"  %> <%= f.label :protein_extraction, "Other" %>
-    </div>
-    <div class="field">
-      <%= f.label :homogenizing_method %><br>
-      <%= f.radio_button :homogenizing_method, "Yes"  %> <%= f.label :homogenizing_method, "Yes" %>
-      <%= f.radio_button :homogenizing_method, "No"  %> <%= f.label :homogenizing_method, "No" %>
-      <%= f.radio_button :homogenizing_method, "Other"  %> <%= f.label :homogenizing_method, "Other" %>
-    </div>
-    <div class="field">
-      <%= f.label :cell_lysis %><br>
-      <%= f.text_field :cell_lysis, :placeholder=>"e.g. heat, detergent,...", class: "form-control"  %>
-    </div>
-    <div class="field">
-      <%= f.label :applied_kit %><br>
-      <%= f.text_field :applied_kit, class: "form-control" %>
-    </div>
-    <div class="field">
-      <%= f.label :other_samprep_method_type %><br>
-      <%= f.text_field :other_samprep_method_type, class: "form-control" %>
-    </div>
-    <div class="field">
-      <%= f.label :samprep_method_type_details_text %><br>
-      <%= f.text_field :samprep_method_type_details_text, class: "form-control" %>
-    </div>
-  </div>
-  <div class="field">
-    <%= f.label :"Sample preparation duration" %><br>
-    <%= f.radio_button :samprep_duration_unit, "seconds"  %> <%= f.label :samprep_duration_unit, "seconds" %>
-    <%= f.radio_button :samprep_duration_unit, "minutes"  %> <%= f.label :samprep_duration_unit, "mminutes" %>
-    <%= f.radio_button :samprep_duration_unit, "hours"  %> <%= f.label :samprep_duration_unit, "hours" %> <br>
-    <%= f.text_field :samprep_duration, class: "form-control" %>
-  </div>
-  <div class="field">
-    <%= f.label :samprep_comment %><br>
-    <%= f.text_area :samprep_comment, class: "form-control" %>
-  </div>
-  <div class="field">
+  <div class="form-group">
     <%= f.label :reference_id %><br>
     <%= f.select :reference_id, Reference.all.order(:first_author_name, :year).collect {|c| [ c.full_ref, c.id ] }, { :include_blank => true, :selected => @samplepreparation.reference_id}, class: "form-control" %>
   </div>
-  <div class="field">
-    <%= f.label :user_id %><br>
-    <%= f.number_field :user_id, class: "form-control" %>
+  <div class="form-group">
+    <%= f.label :"samprep_short_name " %><br>
+    <%= f.text_field :samprep_short_name, class: "form-control" %>
   </div>
-  
+  <div class="form-group">
+    <%= f.label :"samprep_long_name " %><br>
+    <%= f.text_area :samprep_long_name, class: "form-control" %>
+  </div>
+  <div class="form-group">
+    <%= f.label :"samprep_process_description " %><br>
+    <%= f.text_area :samprep_process_description, class: "form-control" %>
+  </div>
+  <div class="row">
+    <div class="panel panel-info">
+      <div class="panel-body">
+        <div class="col-md-4">
+          <div class="form-group">
+            <%= f.label :"Dilution fluid " %><br>
+            <%= f.text_field :dilution_fuid, class: "form-control" %>
+          </div>
+          <div class="form-group">
+            <%= f.label :"first_dilution_ratio " %><br>
+            <%= f.text_field :first_dilution_ratio, class: "form-control" %>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="form-group">
+            <%= f.label :"Sampreparation_weight_of_sample " %><br>
+            <%= f.radio_button :spik_weight_of_sample_unit, "Milligramm"  %> <%= f.label :spik_weight_of_sample_unit, "Milligramm" %><br>
+            <%= f.radio_button :spik_weight_of_sample_unit, "Gramm"  %> <%= f.label :spik_weight_of_sample_unit, "Gramm" %><br>
+            <%= f.radio_button :spik_weight_of_sample_unit, "Kilogramm"  %> <%= f.label :spik_weight_of_sample_unit, "Kilogramm" %> <br>
+            <%= f.text_field :spik_weight_of_sample, class: "form-control" %>
+          </div>
+        </div>
+        <div class="col-md-4">      
+          <div class="form-group">
+            <%= f.label :"Sample preparation duration " %><br>
+            <%= f.radio_button :samprep_duration_unit, "seconds"  %> <%= f.label :samprep_duration_unit, "seconds" %><br>
+            <%= f.radio_button :samprep_duration_unit, "minutes"  %> <%= f.label :samprep_duration_unit, "mminutes" %><br>
+            <%= f.radio_button :samprep_duration_unit, "hours"  %> <%= f.label :samprep_duration_unit, "hours" %> <br>
+            <%= f.text_field :samprep_duration, class: "form-control" %>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="panel panel-info">
+      <h3>preparation method type</h3>
+      <div class="panel-body"> 
+          <div class="form-group">
+            <%= f.label :"samprep_method_validated_for_condiments?" %>
+            <%= f.radio_button :samprep_method_validated_for_condiments, "Yes"  %> <%= f.label :samprep_method_validated_for_condiments, "Yes" %>
+            <%= f.radio_button :samprep_method_validated_for_condiments, "No"  %> <%= f.label :samprep_method_validated_for_condiments, "No" %>
+            <%= f.radio_button :samprep_method_validated_for_condiments, "Unknown"  %> <%= f.label :samprep_method_validated_for_condiments, "Unknown" %> 
+          </div>
+          <div class="form-group">
+            <%= f.label :"enrichment?" %>
+            <%= f.radio_button :enrichment, "Yes"  %> <%= f.label :enrichment, "Yes" %>
+            <%= f.radio_button :enrichment, "No"  %> <%= f.label :enrichment, "No" %>
+            <%= f.radio_button :enrichment, "Other"  %> <%= f.label :enrichment, "Other" %> 
+          </div>
+          <div class="form-group">
+            <%= f.label :"DNA extraction?" %>
+            <%= f.radio_button :dna_extraction, "Yes"  %> <%= f.label :dna_extraction, "Yes" %>
+            <%= f.radio_button :dna_extraction, "No"  %> <%= f.label :dna_extraction, "No" %>
+            <%= f.radio_button :dna_extraction, "Other"  %> <%= f.label :dna_extraction, "Other" %>
+          </div>
+          <div class="form-group">
+            <%= f.label :"RNA extraction?" %>
+            <%= f.radio_button :rna_extraction, "Yes"  %> <%= f.label :rna_extraction, "Yes" %>
+            <%= f.radio_button :rna_extraction, "No"  %> <%= f.label :rna_extraction, "No" %>
+            <%= f.radio_button :rna_extraction, "Other"  %> <%= f.label :rna_extraction, "Other" %>
+          </div>
+          <div class="form-group">
+            <%= f.label :"protein_extraction?" %>
+            <%= f.radio_button :protein_extraction, "Yes"  %> <%= f.label :protein_extraction, "Yes" %>
+            <%= f.radio_button :protein_extraction, "No"  %> <%= f.label :protein_extraction, "No" %>
+            <%= f.radio_button :protein_extraction, "Other"  %> <%= f.label :protein_extraction, "Other" %>
+          </div>
+          <div class="form-group">
+            <%= f.label :"homogenizing_method?" %>
+            <%= f.radio_button :homogenizing_method, "Yes"  %> <%= f.label :homogenizing_method, "Yes" %>
+            <%= f.radio_button :homogenizing_method, "No"  %> <%= f.label :homogenizing_method, "No" %>
+            <%= f.radio_button :homogenizing_method, "Other"  %> <%= f.label :homogenizing_method, "Other" %>
+          </div>
+          <div class="form-group">
+            <%= f.label :"homogenize_with " %><br>
+            <%= f.text_field :homogenize_with, class: "form-control" %>
+          </div>
+          <div class="form-group">
+            <%= f.label :"cell_lysis " %><br>
+            <%= f.text_field :cell_lysis, :placeholder=>"e.g. heat, detergent,...", class: "form-control"  %>
+          </div>
+          <div class="form-group">
+            <%= f.label :"applied_kit " %><br>
+            <%= f.text_field :applied_kit, class: "form-control" %>
+          </div>
+          <div class="form-group">
+            <%= f.label :"other_samprep_method_type " %><br>
+            <%= f.text_field :other_samprep_method_type, class: "form-control" %>
+          </div>
+          <div class="form-group">
+            <%= f.label :"samprep_method_type_details_text " %><br>
+            <%= f.text_field :samprep_method_type_details_text, class: "form-control" %>
+          </div>
+        </div>
+      </div>
+  </div>
+  <div class="form-group">
+    <%= f.label :"samprep_comment " %><br>
+    <%= f.text_area :samprep_comment, class: "form-control" %>
+  </div>
     </div>
   </div>
   <div class="actions">
