--- a/app/views/spikings/_form.html.erb
+++ b/app/views/spikings/_form.html.erb
@@ -15,48 +15,44 @@
 <div class="well">          
   <div class="panel panel-info">
     <div class="panel-body">
-
-      <div class="field">
-        <%= f.label :spik_short_name %><br>
-        <%= f.text_field :spik_short_name %>
-      </div>
-      <div class="field">
-        <%= f.label :spik_long_name %><br>
-        <%= f.text_area :spik_long_name %>
-      </div>
-      <div class="field">
-        <%= f.label :spik_process_description %><br>
-        <%= f.text_area :spik_process_description %>
-      </div>
-      <div class="field">
-        <%= f.label :spik_device_needed %><br>
-        <%= f.text_field :spik_device_needed %>
-      </div>
-      <div class="field">
-        <%= f.label :pros %><br>
-        <%= f.text_area :pros %>
-      </div>
-      <div class="field">
-        <%= f.label :cons %><br>
-        <%= f.text_area :cons %>
-      </div>
-
-      <%= f.fields_for :spikingparams do |builder| %>
-        <%= render 'spikingparam_fields', f: builder %>
-      <% end %>   
-      <p><%= f.link_to_add "Add more Spiking parameter fields.", :spikingparams, class: "btn btn-success btn-sm" %></p>
-
-      <div class="field">
+      <div class="form-group">
         <%= f.label :reference_id %><br>
         <%= f.select :reference_id, Reference.all.order(:first_author_name, :year).collect {|c| [ c.full_ref, c.id ] }, { :include_blank => true, :selected => @spiking.reference_id}, class: "form-control" %>
       </div>
-      <div class="field">
-        <%= f.label :user_id %><br>
-        <%= f.number_field :user_id %>
+      <div class="form-group">
+        <%= f.label :"spik_short_name " %><br>
+        <%= f.text_field :spik_short_name, class: "form-control" %>
+      </div>
+      <div class="form-group">
+        <%= f.label :"spik_long_name " %><br>
+        <%= f.text_area :spik_long_name, class: "form-control" %>
+      </div>
+      <div class="form-group">
+        <%= f.label :"spik_process_description " %><br>
+        <%= f.text_area :spik_process_description, class: "form-control" %>
+      </div>
+      <div class="form-group">
+        <%= f.label :"spik_device_needed " %><br>
+        <%= f.text_field :spik_device_needed, class: "form-control" %>
+      </div>
+      <div class="form-group">
+        <%= f.label :"pros " %><br>
+        <%= f.text_area :pros, class: "form-control" %>
+      </div>
+      <div class="form-group">
+        <%= f.label :"cons " %><br>
+        <%= f.text_area :cons, class: "form-control" %>
       </div>
 
+      <div class="row">
+        <%= f.fields_for :spikingparams do |builder| %>
+          <%= render 'spikingparam_fields', f: builder %>
+        <% end %>   
+        <p><%= f.link_to_add "Add more Spiking parameter fields.", :spikingparams, class: "btn btn-success btn-sm" %></p>
+      </div>
     </div>
   </div>
+</div>
   <div class="actions">
     <%= f.submit 'Save Spiking', class: "btn btn-success" %> | | 
     <%= link_to 'Cancel', spikings_path, class: "btn btn-danger" %>
