--- a/app/views/spikings/_spikingparam_fields.html.erb
+++ b/app/views/spikings/_spikingparam_fields.html.erb
@@ -1,39 +1,44 @@
-  <div class="form-group">
-    <%= f.link_to_remove "Remove these Spiking parameter fields.", class: "btn btn-danger btn-sm" %>
-  </div>  
-  <div class="field">
-    <%= f.label :spik_weight_of_sample %><br>
-    <%= f.text_field :spik_weight_of_sample %>
-  </div>
-  <div class="field">
-    <%= f.label :spik_weight_of_sample_unit %><br>
-    <%= f.text_field :spik_weight_of_sample_unit %>
-  </div>
-  <div class="field">
-    <%= f.label :cfu_of_inoculum_per_ml %><br>
-    <%= f.text_field :cfu_of_inoculum_per_ml %>
-  </div>
-  <div class="field">
-    <%= f.label :cfu_per_gram_spice_spiked %><br>
-    <%= f.text_field :cfu_per_gram_spice_spiked %>
-  </div>
-  <div class="field">
-    <%= f.label :carrier_substance %><br>
-    <%= f.text_field :carrier_substance %>
-  </div>
-  <div class="field">
-    <%= f.label :carrier_fluid %><br>
-    <%= f.text_field :carrier_fluid %>
-  </div>
-  <div class="field">
-    <%= f.label :spik_duration %><br>
-    <%= f.text_field :spik_duration %>
-  </div>
-  <div class="field">
-    <%= f.label :spik_duration_unit %><br>
-    <%= f.text_field :spik_duration_unit %>
-  </div>
-  <div class="field">
-    <%= f.label :spik_comment %><br>
-    <%= f.text_area :spik_comment %>
-  </div>
+  <div class="col-md-6">
+    <div class="panel panel-info">
+      <div class="panel-body">
+        <div class="form-group">
+          <%= f.link_to_remove "Remove Spiking parameter fields.", class: "btn btn-danger btn-sm" %>
+        </div>  
+        <div class="form-group">
+          <%= f.label :spik_weight_of_sample %><br>
+            <%= f.radio_button :spik_weight_of_sample_unit, "Milligramm"  %> <%= f.label :spik_weight_of_sample_unit, "Milligramm" %>
+            <%= f.radio_button :spik_weight_of_sample_unit, "Gramm"  %> <%= f.label :spik_weight_of_sample_unit, "Gramm" %>
+            <%= f.radio_button :spik_weight_of_sample_unit, "Kilogramm"  %> <%= f.label :spik_weight_of_sample_unit, "Kilogramm" %>
+          <%= f.text_field :spik_weight_of_sample, class: "form-control" %>
+        </div>
+        <div class="form-group">
+          <%= f.label :cfu_of_inoculum_per_ml %><br>
+          <%= f.text_field :cfu_of_inoculum_per_ml, class: "form-control" %>
+        </div>
+        <div class="form-group">
+          <%= f.label :cfu_per_gram_spice_spiked %><br>
+          <%= f.text_field :cfu_per_gram_spice_spiked, class: "form-control" %>
+        </div>
+        <div class="form-group">
+          <%= f.label :carrier_substance %><br>
+          <%= f.text_field :carrier_substance, class: "form-control" %>
+        </div>
+        <div class="form-group">
+          <%= f.label :carrier_fluid %><br>
+          <%= f.text_field :carrier_fluid, class: "form-control" %>
+        </div>
+        <div class="form-group">
+          <%= f.label :spik_duration %><br>
+            <%= f.radio_button :spik_duration_unit, "seconds"  %> <%= f.label :spik_duration_unit, "seconds" %>
+            <%= f.radio_button :spik_duration_unit, "minutes"  %> <%= f.label :spik_duration_unit, "mminutes" %>
+            <%= f.radio_button :spik_duration_unit, "hours"  %> <%= f.label :spik_duration_unit, "hours" %>           
+          <%= f.text_field :spik_duration, class: "form-control" %>
+        </div>
+        <div class="form-group">
+        <div class="form-group">
+          <%= f.label :spik_comment %><br>
+          <%= f.text_area :spik_comment, class: "form-control" %>
+        </div>
+      </div> 
+    </div> 
+  </div> 
