--- a/app/views/tenacities/_form.html.erb
+++ b/app/views/tenacities/_form.html.erb
@@ -16,38 +16,35 @@
   <div class="panel panel-info">
     <div class="panel-body">
 
-  <div class="field">
-    <%= f.label :total_sample_number %><br>
-    <%= f.number_field :total_sample_number %>
-  </div>
-  <div class="field">
-    <%= f.label :inoculum_concentration_initial %><br>
-    <%= f.number_field :inoculum_concentration_initial %>
-  </div>
-  <div class="field">
-    <%= f.label :i_concentration_unit %><br>
-    <%= f.text_field :i_concentration_unit %>
-  </div>
+      <div class="form-group">
+        <%= f.label :reference_id %><br>
+        <%= f.select :reference_id, Reference.all.order(:first_author_name, :year).collect {|c| [ c.full_ref, c.id ] }, { :include_blank => true, :selected => @tenacity.reference_id}, class: "form-control" %>
+      </div>
+      <div class="form-group">
+        <%= f.label :"total_sample_number " %><br>
+        <%= f.number_field :total_sample_number, class: "form-control" %>
+      </div>
+      <div class="form-group">
+        <%= f.label :"inoculum_concentration_initial " %><br>
+          <%= f.radio_button :i_concentration_unit, "CfU/Gramm"  %> <%= f.label :i_concentration_unit, "CfU/Gramm" %>
+          <%= f.radio_button :i_concentration_unit, "CfU/Milliliter"  %> <%= f.label :i_concentration_unit, "CfU/Milliliter" %>
+        <%= f.number_field :inoculum_concentration_initial, class: "form-control" %>
+      </div>
 
-  <%= f.fields_for :tenacityparams do |builder| %>
-    <%= render 'tenacityparam_fields', f: builder %>
-  <% end %>
-  <p><%= f.link_to_add "Add more Tenacity parameter fields.", :tenacityparams, class: "btn btn-success btn-sm" %></p>
+      <div class="row">
+        <%= f.fields_for :tenacityparams do |builder| %>
+          <%= render 'tenacityparam_fields', f: builder %>
+        <% end %>
+        <p><%= f.link_to_add "Add more Tenacity parameter fields.", :tenacityparams, class: "btn btn-success btn-sm" %></p>
+      </div>
 
-  <div class="field">
-    <%= f.label :reference_id %><br>
-    <%= f.select :reference_id, Reference.all.order(:first_author_name, :year).collect {|c| [ c.full_ref, c.id ] }, { :include_blank => true, :selected => @tenacity.reference_id}, class: "form-control" %>
-  </div>
-  <div class="field">
-    <%= f.label :user_id %><br>
-    <%= f.number_field :user_id %>
-  </div>
+      <div class="actions">
+        <%= f.submit 'Save Tenacity', class: "btn btn-success" %> | | 
+        <%= link_to 'Cancel', tenacities_path, class: "btn btn-danger" %>
+      </div>
+
     </div>
   </div>
-  <div class="actions">
-    <%= f.submit 'Save Tenacity', class: "btn btn-success" %> | | 
-    <%= link_to 'Cancel', tenacities_path, class: "btn btn-danger" %>
-  </div>
-  <% end %>
+ <% end %>
 </div>
 
