contastatus laeuft wieder

--- a/app/views/home/insertdata.html.erb
+++ b/app/views/home/insertdata.html.erb
@@ -18,10 +18,9 @@
 				  <div class="panel panel-info">
 				    <div class="panel-body">	
 				    	<p>Please choose one Entity to insert new data. Start always with REFERENCE.</p>
-				    	<p>Generally there are two ways to insert data. </p>
 				    	<ol>
-				    		<li>Single: Insert all data in its basic table then make a join. </li>
-				    		<li>Context: Insert data with the help of a guideline. Keep in mind that here are some ristrictions within the combinations.</li>
+				    		<li>Insert all data in its basic table . </li>
+				    		<li>Join Data in tha master table.</li>
 				    	</ol>
 				    </div>
 				  </div>
