--- a/app/views/tenacities/show.html.erb
+++ b/app/views/tenacities/show.html.erb
@@ -60,7 +60,7 @@
 
               <p>
                 <strong>Reference:</strong>
-                <%= @tenacity.reference %>
+                <%= @tenacity.reference_id %>
               </p>
 
               <p>
