treat duration feld wieder hinzugefuegt

--- a/app/views/treatments/_form.html.erb
+++ b/app/views/treatments/_form.html.erb
@@ -28,6 +28,7 @@
             <%= f.radio_button :treat_duration_unit, "seconds"  %> <%= f.label :treat_duration_unit, "seconds" %>
             <%= f.radio_button :treat_duration_unit, "minutes"  %> <%= f.label :treat_duration_unit, "minutes" %>
             <%= f.radio_button :treat_duration_unit, "hours"  %> <%= f.label :treat_duration_unit, "hours" %> 
+            <%= f.text_field :treat_duration, class: "form-control"  %>
       </div>
 
       <div class="row">
