save to pdf test

--- a/app/views/references/show.html.erb
+++ b/app/views/references/show.html.erb
@@ -129,6 +129,11 @@
         </div>
       </div>
 
+
+      <a href="//pdfcrowd.com/url_to_pdf/">Save to PDF</a>
+      <a href="http://www.web2pdfconvert.com/convert">Save to PDF</a>
+
+      
     </div>     
   </div>
 </div>
